--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang = "eng">
   <head>
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="index.css">
     <title>Nick Hillary's Quiz Assignment</title>
     <meta name = "viewport" content = "width=divice-width">
     <meta name = "description" content = "Test your knolwedge of music throughout the ages.">
@@ -11,8 +11,8 @@
          <div id = "reset-and-num-display">
            <button id = "reset-button" type="button">Reset</button>
            <div id= "number-display">
-             <div id = "question-num-display"></div>
-             <div id = "score-num-display"></div>
+             <div id = "question-num-display">Question <span id="question-num">of 10</span></div>
+             <div id = "score-num-display">Score:<span id="span-score"></span>/10</div>
            </div>
          </div>
            <div id="intro-greeting">
@@ -20,31 +20,31 @@
              <button id ="begin-button" type="button">Let's Go!</button>
            </div>
            <div id ="main-interactive-area">
-             <h2 class="question"></h2>
-             <form>
-               <fieldset>
-                 <label>
+             <h2 class="question">First Question Filler</h2>
+             <form id = "answer-area">
+               <fieldset id ="question-block">
+                 <label class ="answer">
                    <input type="radio" required>
-                   <span></span>
+                   <span>answer 1 Filler</span>
                  </label>
 
-                 <label>
+                 <label class ="answer">
                     <input type="radio" required>
-                    <span></span>
+                    <span>answer 2 Filler</span>
                 </label>
 
-                  <label>
+                  <label class ="answer">
                       <input type="radio" required>
-                      <span></span>
+                      <span>answer 3 Filler</span>
                     </label>
 
-                  <label>
+                  <label class ="answer">
                       <input type="radio" required>
-                      <span></span>
+                      <span>answer 4 Filler</span>
                   </label>
                </fieldset>
              </form>
-             <button type="button">Submit</button>
+             <button class = "question-submit" type="button">Submit</button>
            </div>
         </main>
         </body>
