added page 2, modified page 1

--- a/index.html
+++ b/index.html
@@ -8,43 +8,12 @@
    <body>
      <header>Music Quiz</header>
        <main>
-         <div id = "reset-and-num-display">
-           <button id = "reset-button" type="button">Reset</button>
-           <div id= "number-display">
-             <div id = "question-num-display">Question <span id="question-num">of 10</span></div>
-             <div id = "score-num-display">Score:<span id="span-score"></span>/10</div>
-           </div>
          </div>
            <div id="intro-greeting">
              <p id = "intro-quote">Ready To Test Your Musical Knowledge?</p>
+             <img id = "intro-picture" src="https://res.cloudinary.com/teepublic/image/private/s--iZULBGhW--/t_Preview/b_rgb:191919,c_limit,f_jpg,h_630,q_90,w_630/v1528291189/production/designs/2761365_0.jpg" alt ="I'll Handel This">
+            </img>
              <button id ="begin-button" type="button">Let's Go!</button>
-           </div>
-           <div id ="main-interactive-area">
-             <h2 class="question">First Question Filler</h2>
-             <form id = "answer-area">
-               <fieldset id ="question-block">
-                 <label class ="answer">
-                   <input type="radio" required>
-                   <span>answer 1 Filler</span>
-                 </label>
-
-                 <label class ="answer">
-                    <input type="radio" required>
-                    <span>answer 2 Filler</span>
-                </label>
-
-                  <label class ="answer">
-                      <input type="radio" required>
-                      <span>answer 3 Filler</span>
-                    </label>
-
-                  <label class ="answer">
-                      <input type="radio" required>
-                      <span>answer 4 Filler</span>
-                  </label>
-               </fieldset>
-             </form>
-             <button class = "question-submit" type="button">Submit</button>
            </div>
         </main>
         </body>
