3rd Wireframe Pass Through

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
              <p id = "intro-quote">Ready To Test Your Musical Knowledge?</p>
              <img id = "intro-picture" src="https://res.cloudinary.com/teepublic/image/private/s--iZULBGhW--/t_Preview/b_rgb:191919,c_limit,f_jpg,h_630,q_90,w_630/v1528291189/production/designs/2761365_0.jpg" alt ="I'll Handel This">
             </img>
-             <button id ="begin-button" type="button">Let's Go!</button>
            </div>
+          <a href="page2.html" id ="begin-button" >Let's Go!</a>
         </main>
         </body>
    </body>
