--- a/page2.html
+++ b/page2.html
@@ -41,7 +41,7 @@
             </label>
           </fieldset>
         </form>
-        <button class = "question-submit" type="button">Submit</button>
+        <a href="page3.html" class = "question-submit" >Submit</a>
     </div>
   </main>
   </body>
