Updated Questions and style sheets

--- a/page2.html
+++ b/page2.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html lang="eng">
-<html>
+<!DOCTYPE html>
+<html lang="eng">
   <head>
-    <link rel="stylesheet" href="index.css">
+    
     <title>Nick Hillary's Quiz Assignment Page 2</title>
-    <meta name = "viewport" content = "width=divice-width">
+    <meta name="viewport" content="width=device-width">
     <meta name = "description" content = "Test your knolwedge of music throughout the ages.">
+    <link rel="stylesheet" href="wire-frame.css">
   </head>
   <body>
     <main>
-        <header>Music Quiz</header>
+      <header>Music Quiz</header>
       <div id = "reset-and-num-display">
         <button id = "reset-button" type="button">Reset</button>
         <div id= "number-display">
@@ -41,8 +42,10 @@
             </label>
           </fieldset>
         </form>
-        <a href="page3.html" class = "question-submit" >Submit</a>
+        <a href="page3.html" class = "question-submit medium-font">Submit</a>
     </div>
   </main>
+  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="questions.js"></script>
   </body>
 </html>
