--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html lang = "eng">
+<!DOCTYPE html>
+ <html lang = "eng">
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="wire-frame.css">
     <title>Nick Hillary's Quiz Assignment</title>
-    <meta name = "viewport" content = "width=divice-width">
+    <meta name="viewport" content="width=device-width">
     <meta name = "description" content = "Test your knolwedge of music throughout the ages.">
   </head>
    <body>
@@ -10,12 +11,19 @@
        <main>
          </div>
            <div id="intro-greeting">
-             <p id = "intro-quote">Ready To Test Your Musical Knowledge?</p>
+             <p id = "intro-quote" class = "medium-font">Ready To Test Your Musical Knowledge?</p>
              <img id = "intro-picture" src="https://res.cloudinary.com/teepublic/image/private/s--iZULBGhW--/t_Preview/b_rgb:191919,c_limit,f_jpg,h_630,q_90,w_630/v1528291189/production/designs/2761365_0.jpg" alt ="I'll Handel This">
             </img>
            </div>
-          <a href="page2.html" id ="begin-button" >Let's Go!</a>
+          <a href="page2.html" id ="begin-button" class = "medium-font">Let's Go!</a>
         </main>
-        </body>
-   </body>
+        <script
+          src="https://code.jquery.com/jquery-3.4.1.min.js"
+          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+          crossorigin="anonymous"></script>
+        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="questions.js"></script>
+       
+    </body>
+   
 </html>
