--- a/page2.html
+++ b/page2.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="wire-frame.css">
   </head>
   <body>
+    <header>Music Quiz</header>
     <main>
-      <header>Music Quiz</header>
-      <div id = "reset-and-num-display">
-        <button id = "reset-button" type="button">Reset</button>
+      <section id="page-2">
         <div id= "number-display">
           <div id = "question-num-display">Question <span id="question-num">of 10</span></div>
           <div id = "score-num-display">Score:<span id="span-score"></span>/10</div>
         </div>
-      </div>
+        
       <div id ="main-interactive-area">
         <h2 class="question">First Question Filler</h2>
         <form id = "answer-area">
@@ -42,9 +41,14 @@
             </label>
           </fieldset>
         </form>
-        <a href="page3.html" class = "question-submit medium-font">Submit</a>
-    </div>
-  </main>
+        <button type="button" class = "question-submit medium-font">Submit</a>
+      </div>
+    </section>
+    </main>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
   <script type="text/javascript" src="index.js"></script>
   <script type="text/javascript" src="questions.js"></script>
   </body>
